<resources>
    <string name="app_name">Suporte_Financeiro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ListaFinancas">Lista de finanças</string>
    <string name="Contato">Contato finanças</string>
    <string name="user">Rafael Martins</string>
    <string name="email">"rafaelviniciusdasilvamartins@gmail.com"</string>

    <string name="action_about">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_dialog_text">
       <![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="https://www.facebook.com/rafaelviniciusdasilvamartins">https://www.facebook.com/rafaelviniciusdasilvamartins</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]>
    </string>
    <string name="todos">todos</string>
    <string name="classicos">clássicos</string>
    <string name="esportivos">esportivos</string>
    <string name="luxo">luxo</string>
    <string name="Frag1">Fragment1</string>
    <string name="Frag2">Fragment2</string>
    <string name="Frag3">Fragment3</string>
    <string name="about_dialog_title">Carros Esportes</string>
    <string name="ok">OK</string>
    <string name="ListaCarros">Lista Carros</string>
    <string name="SiteLivro">Site Livro</string>
    <string name="button">Button</string>
    <string name="CadastrarFinancas">Cadastrar Finanças</string>
    <string name="ExcluirFinancas">Excluir Financas</string>
    <string name="VisualizarFinancas">Visualizar Finanças</string>
    <string name="CadastrarUsuario">Cadastrar Usuário</string>
    <string name="VisualizarUsuario">Visualizar Usuários</string>
    <string name="ExcluirUsuario">Excluir Usuário</string>
    <string name="CadastrarRenda">Cadastro Renda</string>
    <string name="VisualizarRenda">Visualizar Renda</string>
    <string name="ExcluirRenda">Excluir Renda</string>
    <string name="CadastrarInvestimento">Cadastrar Investimento</string>
    <string name="VisualizarInvestimento">Visualizar Investimento</string>
    <string name="ExcluirInvestimento">Excluir Investimento</string>
    <string name="ExcluirDespesa">Excluir Despesa</string>
    <string name="CadastrarDespesa">Cadastrar Despesas</string>
    <string name="VisualizarDespesa">Visualizar Despesas</string>
    <string name="title_activity_despesa_fragment">DespesaActivityFragment</string>
    <string name="title_activity_investimento_fragment">InvestimentoActivityFragment</string>
    <string name="title_activity_renda_fragment">RendaActivityFragment</string>
    <string name="title_activity_usuario_fragment">UsuarioActivityFragment</string>

    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="title_activity_login_usuario">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_relatorio_anual">RelatorioAnual</string>
    <string name="situa_o">Situação</string>
    <string name="despesas">Despesas</string>
    <string name="quantidade">Quantidade</string>
    <string name="status">Status</string>
    <string name="valor">Valor</string>
    <string name="investimentos">Investimentos</string>
    <string name="Zero">0</string>
    <string name="despesas_lazer">Despesas Lazer</string>
    <string name="valor_total">Valor Total</string>
    <string name="situacao">Situação</string>
    <string name="despesas_importantes">Despesas Importantes</string>
    <string name="Valor_Padrao">0</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_o_nome">Informe o nome</string>
    <string name="informe_o_valor">Informe o valor</string>
    <string name="AplicacaoNome">Help Finances</string>
    <string name="Email_Creator">rafaelviniciusdasilvamartins@gmail.com</string>
    <string name="nome_do_produto">nome do produto</string>
    <string name="quantidade_produto">Quantidade Produto</string>
    <string name="title_activity_visualizar_lista">VisualizarLista</string>
    <string name="title_activity_relatorio_mensal">RelatorioMensal</string>
    <string name="dezembro">Dezembro</string>
    <string name="agosto">Agosto</string>
    <string name="julho">Julho</string>
    <string name="junho">Junho</string>
    <string name="novembro">Novembro</string>
    <string name="outubro">Outubro</string>
    <string name="setembro">Setembro</string>
    <string name="essencial">essencial</string>
</resources>
