<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.livroandroid.suporte_financeiro.Fragments.investimentos.CadastrarInvestimentos">

        <EditText
            android:id="@+id/EditValorInvestimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/informe_o_valor"
            android:layout_alignStart="@+id/calendarViewInvestimento" />

        <EditText
            android:id="@+id/Edit_Investimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informe_o_nome"
            android:inputType=""
            tools:ignore="LabelFor"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/EditValorInvestimento"
            android:layout_alignStart="@+id/calendarViewInvestimento" />

        <Button
            android:text="@string/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_investimento"
            android:layout_marginEnd="12dp"
            android:layout_alignBottom="@+id/Edit_Investimento"
            android:layout_alignEnd="@+id/calendarViewInvestimento" />

        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendarViewInvestimento"
            android:layout_below="@+id/Edit_Investimento"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp" />


</RelativeLayout>
